fixing-nav-overflow

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,6 +9,10 @@
     padding: 0;
 }
 
+html,body{
+    overflow: hidden;
+}
+
 .header {
     height: 100vh;
     position: relative;
